--- a/PWA.Shared/PWA.Shared.csproj
+++ b/PWA.Shared/PWA.Shared.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenLayers" Version="4.6.4" />
+  </ItemGroup>
+
 </Project>
