--- a/PWA/PWA.csproj
+++ b/PWA/PWA.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.1.7" />
+    <PackageReference Include="OpenLayers" Version="4.6.4" />
   </ItemGroup>
 
   <ItemGroup>
