--- a/PWA.Api/appsettings.json
+++ b/PWA.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=mydb.db;"
+  },
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "<CHANGEmeTOsomethingSECUREplease>"
+  }
 }
